[tool.poetry]
name = "django-unique-user-email"
version = "0.1.0"
description = ""
authors = ["Carlton Gibson carlton.gibson@noumenal.es", "svtter <svtter@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
